--- a/src/pages/HomePage/components/Coffee/Products.module.css
+++ b/src/pages/HomePage/components/Coffee/Products.module.css
@@ -5,11 +5,10 @@
   position: relative;
   width: 100%;
   height: 800px;
-  background: #edf0f5;
+  background: #f5f7fa;
   overflow: hidden;
 }
 
-/* Заголовок */
 .heading {
   position: absolute;
   top: 60px;
@@ -60,10 +59,7 @@
   scroll-behavior: smooth;
   padding-top: 170px;
   position: relative;
-
   scroll-snap-type: x mandatory;
-
-  /* накладання на синій фон */
   margin-left: -180px;
 }
 .right::-webkit-scrollbar {
@@ -86,7 +82,6 @@
   opacity: 0;
 }
 
-/* Картки */
 .card {
   width: 559px;
   height: 256px;
