--- a/src/pages/PhinComboPage/PhinComboPage.module.css
+++ b/src/pages/PhinComboPage/PhinComboPage.module.css
@@ -23,33 +23,40 @@
   color: #415167;
 }
 
-.comboFilters {
+.filtersRow {
   display: flex;
   gap: 15px;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content:  center;
+  align-items: center;
   margin-bottom: 40px;
 }
 
-.comboFilters input {
+.searchInput {
+  max-width: 300px;
   padding: 10px 15px;
   font-size: 16px;
   border-radius: 12px;
   border: 1px solid #ccc;
+  outline: none;
   background-color: #fff;
   transition: all 0.3s ease;
 }
 
-.comboFilters input:focus {
+.searchInput:focus {
   border-color: #c7a17a;
   box-shadow: 0 0 5px rgba(199, 161, 122, 0.5);
-  outline: none;
+}
+
+.customSelectWrapper {
+  flex: 1 1 180px;
+  max-width: 250px;
 }
 
 .comboGrid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px 15px; /* менші відступи по боках */
+  gap: 20px 15px;
   justify-items: center;
 }
 
@@ -180,9 +187,20 @@
   box-shadow: 0 4px 10px rgba(0,0,0,0.15);
 }
 
+/* Адаптив */
 @media (max-width: 1024px) {
   .comboGrid {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .filtersRow {
+    flex-direction: column;
+    align-items: stretch;
+  }
+  .searchInput, .customSelectWrapper {
+    max-width: 100%;
   }
 }
 
