--- a/src/pages/HomePage/components/Footer/FooterSection.module.css
+++ b/src/pages/HomePage/components/Footer/FooterSection.module.css
@@ -5,8 +5,8 @@
   height: 60px;
   margin: 0;
   display: flex;
-  align-items: center;  /* центруємо текст по вертикалі */
-  justify-content: center; /* центруємо текст по горизонталі */
+  align-items: center; 
+  justify-content: center;
 }
 
 .footer p {
