--- a/src/pages/PersonalCabinetPage/ProfilePage/ProfilePage.module.css
+++ b/src/pages/PersonalCabinetPage/ProfilePage/ProfilePage.module.css
@@ -12,7 +12,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 25px;
   
 }
 
@@ -27,6 +26,7 @@
   align-items: center;
   gap: 6px;
   padding: 8px 16px;
+  margin-top: 20px;
   margin-right: 27px;
   background-color: #c7a17a;
   color: #fff;
